--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
   },
   "dependencies": {
     "aws-sdk": "^2.709.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2020": "^1.0.2",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "babel-register": "^6.26.0",
     "body-parser": "^1.19.0",
     "canada": "^0.1.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-bignumber": "^3.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -22,8 +31,11 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "multer-sharp-s3": "^0.2.1",
+    "node-fetch": "^2.6.1",
     "slugify": "^1.4.4",
-    "util": "^0.12.3"
+    "truffle": "^5.1.44",
+    "util": "^0.12.3",
+    "web3": "^1.2.11"
   },
   "devDependencies": {
     "eslint": "^7.3.1",
