--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.2",
     "multer-sharp-s3": "^0.2.1",
     "node-fetch": "^2.6.1",
+    "node-geocoder": "^3.27.0",
     "slugify": "^1.4.4",
     "truffle": "^5.1.44",
     "util": "^0.12.3",
