--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,8 +12,5 @@
   "parserOptions": {
     "ecmaVersion": 2018
   },
-  "rules": {
-    "comma-dangle": ["error", "never"]
-  },
-  "trailingComma": "all"
+  "rules": {}
 }
